# LookTube

./: .editorconfig  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.txt  WARP.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: release.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/jni/: CMakeLists.txt  looktube_whisper_jni.cpp
app/src/main/res/drawable/: library_fixture_thumb_1.xml  library_fixture_thumb_2.xml  library_fixture_thumb_3.xml  library_fixture_thumb_4.xml
buildSrc/src/main/kotlin/: DocsCheckTask.kt
core/data/: build.gradle.kts
core/database/: build.gradle.kts
core/designsystem/: build.gradle.kts
core/heuristics/: build.gradle.kts
core/model/: build.gradle.kts
core/network/: build.gradle.kts
core/testing/: build.gradle.kts
docs/architecture/: overview.md
docs/decisions/: ADR-0001-foundation.md  ADR-0002-auth-persistence.md  ADR-0003-offline-captions.md
docs/integration/: giantbomb.md
docs/learned-notes/: 2026-03.md
docs/releases/: github-releases.md
docs/spec/: product-spec.md  reproducible-project-spec.md
docs/spec/agent-spec-package/: metadata.toml  spec.yaml
docs/spec/agent-spec-package/references/: architecture.md
docs/spec/design/: library-group-header-concept.psd
docs/testing/: local-ci.md
feature/auth/: build.gradle.kts
feature/player/: build.gradle.kts
feature/settings/: build.gradle.kts
gradle/: libs.versions.toml
scripts/: Bootstrap-LocalAndroid.ps1  Invoke-GiantBombFeedProbe.ps1  Invoke-GiantBombPlaybackProbe.ps1  Sign-BaselineRelease.ps1  Sign-ReleaseApk.ps1
(+89 files in other folders)
